# test-task

./: README.md  рш
tasks/ analyst/: README.md
tasks/QA/: README.md
tasks/backend/GO/: README.md
tasks/backend/GO/gremiha3/: .env  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-compose.yml.bak  go.mod
tasks/backend/GO/small_warehouse/: README.md  go.mod  go.sum
tasks/backend/Python/: README.md
tasks/backend/Python/1/: README  README.md
tasks/backend/Python/2/: README.md
tasks/backend/Python/AlekseevKirill/: README.md
tasks/backend/Python/AlekseevKirill/task_1/shawarma_stall/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
tasks/backend/Python/AlekseevKirill/task_1/shawarma_stall/app/: admin.py  models.py  serializers.py  urls.py  views.py
tasks/backend/Python/AlekseevKirill/task_1/shawarma_stall/app/migrations/: 0001_initial.py  0002_order.py  0003_order_count.py
tasks/backend/Python/AlekseevKirill/task_1/shawarma_stall/shawarma_stall/: asgi.py  settings.py  urls.py  wsgi.py
tasks/backend/Python/DjangoPetProject/: manage.py  requirements.txt
tasks/backend/Python/R/: README.md
tasks/backend/Python/Umiacha/: .gitignore
tasks/backend/Python/iRomaT/: requirements.txt
tasks/backend/Python/Александр Shuero/: README.md  manage.py
tasks/frontend/: README.md
tasks/frontend/@andrei_lerke/: 1.tsx  2.tsx  3.css  3.tsx  useWindowSize.ts
tasks/frontend/@evg1401/1/: windowsize.js  windowsize.jsx
tasks/frontend/@theAntonio/: 1.tsx  2.tsx  3.tsx
tasks/frontend/Stepan Rudakov/: README.md
(+300 files in other folders)
